subscription-code-updated

--- a/app/code/Ecomm/Subscription/view/frontend/layout/subscription_myaccount_subscription.xml
+++ b/app/code/Ecomm/Subscription/view/frontend/layout/subscription_myaccount_subscription.xml
@@ -5,7 +5,7 @@
           <argument translate="true" name="title" xsi:type="string">Subscription</argument>
           </action> </referenceBlock>
           <referenceContainer name="content">
-               <block class="Magento\Framework\View\Element\Template" cacheable="true" name="my_tab" template="Ecomm_Subscription::subscription.phtml"> </block> 
+               <block class="Ecomm\Subscription\Block\SubscriptionCustomer" cacheable="false" name="subscription_tab" template="Ecomm_Subscription::subscription.phtml"> </block> 
                </referenceContainer> 
                
                </body> 
