--- a/app/code/Ecomm/Subscription/view/frontend/templates/subscription.phtml
+++ b/app/code/Ecomm/Subscription/view/frontend/templates/subscription.phtml
@@ -1,1 +1,99 @@
-<h1>Data</h1>
+<?php
+$customer = $block->getCustomer();
+$subscriptionData = null;
+if ($customer != null) {
+    $subscriptionData = $block->getSubscriptionData($customer->getId());
+}
+
+?>
+    <?php
+        $active = ' <table class="table">
+        <thead>
+          <tr>
+            <th>Product</th>
+            <th>Subscription</th>
+            <th>Next Date</th>
+            <th>End Type</th>
+            <th>End Value</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>';
+
+        $endActive = $active;
+    foreach ($subscriptionData as $lite) {
+        if ($lite->getStatus()) {
+            $active .= '<tr>';
+            $active .= '<td>'.$lite->getProductId().'</td>'.
+            '<td>'.$lite->getSubscriptionType().'</td>'.
+            '<td>'.$lite->getNextDate().'</td>'.
+            '<td>'.$lite->getSubscriptionEndType().'</td>';
+            if ($lite->getSubscriptionEndType() == 'Date' || $lite->getSubscriptionEndType() == 'Cycle') {
+                $active .= '<td>'.$lite->getSubscriptionEndValue().'</td>';
+            } else {
+                $active .= '<td><a href="/subscription/myaccount/subend/?id='.$lite->getId().'">Click End</a></td>';
+            }
+            $active .= '<td><a href="/subscription/myaccount/orderlist/?id='.$lite->getId().'">View</a></td>';
+            $active .= '</tr>';
+        } else {
+            $endActive .= '<tr>';
+            $endActive .= '<td>'.$lite->getProductId().'</td>'.
+            '<td>'.$lite->getSubscriptionType().'</td>'.
+            '<td>'.$lite->getNextDate().'</td>'.
+            '<td>'.$lite->getSubscriptionEndType().'</td>'.
+            '<td>'.$lite->getSubscriptionEndValue().'</td>';
+            $endActive .= '<td><a href="/subscription/myaccount/orderlist/?id='.$lite->getId().'">View</a></td>';
+            $endActive .= '</tr>';
+        }
+        
+    }
+    $active .= '</tbody>
+    </table>';
+    $endActive .= '</tbody>
+    </table>';
+    ?>
+
+   <div id="element" data-mage-init='{
+    "accordion":{
+        "openedState": "active", 
+        "collapsible": true, 
+        "active": false, 
+        "multipleCollapsible": true
+    }}'>
+
+    <div data-role="collapsible">
+        <div data-role="trigger">
+            <span><h2>Active Subscription</h2></span>
+        </div>
+    </div>
+    
+    <?php if ($active != ''):
+            echo '<div data-role="content">' . $active . ' </div>';
+        ?>
+       
+    <?php else: ?>
+    <div data-role="content">Non Active</div>
+    <?php endif; ?>
+
+    <div data-role="collapsible">
+        <div data-role="trigger">
+            <span><h2>End Subscription</h2></span>
+        </div>
+    </div>
+    <?php if ($endActive != null):
+            echo '<div data-role="content">' . $endActive . ' </div>';
+        ?>
+    <?php else: ?>
+    <div data-role="content">No Active</div>
+    <?php endif; ?>
+</div>
+
+<script>
+    require([
+        "jquery",
+        "accordion"
+    ],function($) {
+        $("#element").accordion({ active: [0] });
+
+    });
+</script>
