--- a/app/code/Ecomm/Subscription/view/frontend/templates/product/view/addtocart.phtml
+++ b/app/code/Ecomm/Subscription/view/frontend/templates/product/view/addtocart.phtml
@@ -95,6 +95,22 @@
                             <input type="number" name="orders" id="orders" value="<?= $block->getProductDefaultQty() * 1 ?>" title="<?= $block->escapeHtmlAttr(__('Qty')) ?>" class="input-text" />
                         </div>
                     </div>
+                    <?php if ($subscription['discount_status']) {?>
+                    <div class="field">
+                        <div class="discount_type">
+                            <label class="label" for="type">
+                                <span><?= $block->escapeHtml(__('Discount Type :')) ?>
+                                <?=$subscription['discount_type']?></span></label>
+
+                        </div>
+                        <div class="discout_value">
+                            <label class="label" for="value">
+                                <span><?= $block->escapeHtml(__('Discount Value :')) ?>
+                            <?=$subscription['discount_value']?></span></label>
+                            
+                        </div>
+                    </div>
+                    <?php } ?>
                 </div>
             </div>
         </div>
