updated all changes for demo

--- a/app/code/Ecomm/Subscription/view/frontend/email/subscription_billing_remainder.html
+++ b/app/code/Ecomm/Subscription/view/frontend/email/subscription_billing_remainder.html
@@ -1,4 +1,4 @@
-<!--@subject Subscription Billing Remainder @-->
+<!--@subject Subscription Renewal Reminder!! @-->
 <!--@vars
 {"store url=\"\"":"Store Url",
 "skin url=\"images/logo_email.gif\" _area='frontend'":"Email Logo Image"}
