--- a/app/code/Ecomm/Subscription/view/frontend/email/subscription_user_cancel.html
+++ b/app/code/Ecomm/Subscription/view/frontend/email/subscription_user_cancel.html
@@ -1,4 +1,4 @@
-<!--@subject Subscription Ending Soon!! @-->
+<!--@subject We're sorry to say goodbye @-->
 <!--@vars
 {"store url=\"\"":"Store Url",
 "skin url=\"images/logo_email.gif\" _area='frontend'":"Email Logo Image"}
@@ -23,32 +23,27 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
                             <tbody>
                                 <tr>
                                     <td colspan="2" valign="top" style="font-size:12px;padding:7px 9px 9px 9px;border:1px solid #EAEAEA;">
-                                       Product Name : {{var product}}
-                                    </td>
-                                    <td colspan="2" valign="top" style="font-size:12px;padding:7px 9px 9px 9px;border:1px solid #EAEAEA;">
-                                        Next Billing Date : {{var date}}
-                                     </td>
-                                   <!-- <td colspan="2" valign="top" style="font-size:12px;padding:7px 9px 9px 9px;border:1px solid #EAEAEA;">
-                                        {{var feature1}}
-                                    </td>-->
-                                </tr>
-                                <tr></tr>
-                                <tr>
-                                    <td valign="top" style="font-size:12px;padding:7px 9px 9px 9px;border:1px solid #EAEAEA;">
                                         {{var message}}
-                                    </td>
-                                    <td valign="top" style="font-size:12px;padding:7px 9px 9px 9px;border:1px solid #EAEAEA;">
-                                        Subscription End Date: {{var date}}
-                                    </td>
-                                    <td valign="top" style="font-size:12px;padding:7px 9px 9px 9px;border:1px solid #EAEAEA;">
-                                        Please visit your account to renew your subscription
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
                     </td>
                 </tr>
-
+                <tr></tr>
+                <tr>
+                    <td>
+                        <table cellspacing="0" cellpadding="0" border="0" width="650">
+                            <tbody>
+                                <tr>
+                                    <td colspan="2" valign="top" style="font-size:12px;padding:7px 9px 9px 9px;border:1px solid #EAEAEA;">
+                                        {{var feature1}}
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
                 <tr>
                     <td bgcolor="#EAEAEA" align="center" style="background:#EAEAEA;text-align:center;">
                         <center>
