--- a/app/code/Ecomm/Subscription/view/frontend/templates/subscription.phtml
+++ b/app/code/Ecomm/Subscription/view/frontend/templates/subscription.phtml
@@ -78,7 +78,7 @@ if ($customer != null) {
         <br/>
     <div data-role="collapsible">
         <div data-role="trigger">
-            <span><h2>End Subscription</h2></span>
+            <span><h2>Expired Subscription</h2></span>
         </div>
     </div>
     <?php if ($endActive != null):
