--- a/app/code/Ecomm/Subscription/view/frontend/email/subscription_purchase.html
+++ b/app/code/Ecomm/Subscription/view/frontend/email/subscription_purchase.html
@@ -1,4 +1,4 @@
-<!--@subject Subscription Purchase @-->
+<!--@subject Subscription Order Placed!! @-->
 <!--@vars
 {"store url=\"\"":"Store Url",
 "skin url=\"images/logo_email.gif\" _area='frontend'":"Email Logo Image"}
