--- a/app/code/Ecomm/Subscription/view/frontend/templates/subscription.phtml
+++ b/app/code/Ecomm/Subscription/view/frontend/templates/subscription.phtml
@@ -1,4 +1,5 @@
 <?php
+
 $customer = $block->getCustomer();
 $subscriptionData = null;
 if ($customer != null) {
@@ -22,10 +23,11 @@ if ($customer != null) {
 
         $endActive = $active;
     foreach ($subscriptionData as $lite) {
+        
         if ($lite->getStatus()) {
             $active .= '<tr>';
-            $active .= '<td>'.$lite->getProductId().'</td>'.
-            '<td>'.$lite->getSubscriptionType().'</td>'.
+            $active .= '<td>'.$lite->getData('product')->getName().'</td>'.
+            '<td>'.$block->getLabel($lite->getData('product'), $lite->getSubscriptionType()).'</td>'.
             '<td>'.$lite->getNextDate().'</td>'.
             '<td>'.$lite->getSubscriptionEndType().'</td>';
             if ($lite->getSubscriptionEndType() == 'Date' || $lite->getSubscriptionEndType() == 'Cycle') {
@@ -36,8 +38,8 @@ if ($customer != null) {
             $active .= '</tr>';
         } else {
             $endActive .= '<tr>';
-            $endActive .= '<td>'.$lite->getProductId().'</td>'.
-            '<td>'.$lite->getSubscriptionType().'</td>'.
+            $endActive .= '<td>'.$lite->getData('product')->getName().'</td>'.
+            '<td>'.$block->getLabel($lite->getData('product'), $lite->getSubscriptionType()).'</td>'.
             '<td>'.$lite->getNextDate().'</td>'.
             '<td>'.$lite->getSubscriptionEndType().'</td>'.
             '<td>'.$lite->getSubscriptionEndValue().'</td>';
@@ -78,7 +80,7 @@ if ($customer != null) {
         <br/>
     <div data-role="collapsible">
         <div data-role="trigger">
-            <span><h2>End Subscription</h2></span>
+            <span><h2>Expired Subscription</h2></span>
         </div>
     </div>
     <?php if ($endActive != null):
