latest code with all changes

--- a/app/code/Ecomm/Subscription/view/frontend/templates/product/view/addtocart.phtml
+++ b/app/code/Ecomm/Subscription/view/frontend/templates/product/view/addtocart.phtml
@@ -1,46 +1,27 @@
 <?php
-/**
- * Copyright © Magento, Inc. All rights reserved.
- * See COPYING.txt for license details.
- */
-
-/** @var $block \Magento\Catalog\Block\Product\View */
-?>
-<?php $_product = $block->getProduct(); ?>
-<?php $buttonTitle = __('Add to Cart'); ?>
-<?php if ($_product->isSaleable()) :?>
-<div class="box-tocart">
-    <div class="fieldset">
-        <?php if ($block->shouldRenderQuantity()) :?>
-        <div class="field qty">
-            <label class="label" for="qty"><span><?= $block->escapeHtml(__('Qty')) ?></span></label>
-            <div class="control">
-                <input type="number"
-                       name="qty"
-                       id="qty"
-                       min="0"
-                       value="<?= $block->getProductDefaultQty() * 1 ?>"
-                       title="<?= $block->escapeHtmlAttr(__('Qty')) ?>"
-                       class="input-text qty"
-                       data-validate="<?= $block->escapeHtml(json_encode($block->getQuantityValidators())) ?>"
-                       />
-            </div>
-        </div>
-        <?php endif; ?>
-        <?php  $subStatus = $_product->getData('subscription_status');
+$_product = $block->getProduct();
+$subStatus = $_product->getData('subscription_status');
                $sub_name = $_product->getData('subscription_name');
-               $subscription = $block->getSubscriptionData();
-        if($subStatus) :?>
+               $subscription = $block->getSubscription();
+        if ($this->getSubscribed()) :
+            ?>
+            <div class="box-tocart">
+                <div class="fieldset">
+                    <div class="field qty">
+                        <div class="control text-center">
+                            <label class="label subsdone"><span class=""><?= $block->escapeHtml(__('Already Subscribed')) ?></span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <?php
+        elseif (!empty($subscription) )  :?>
         <p><?php //echo  json_encode($_product->getData('type'))  ?></p>
         <div class="box-tocart">
             <div class="fieldset">
                 <div class="field qty">
                     <div class="control text-center">
-                        <!--<label class="label">
-                            <input type="radio" name="subscription" value="0" title="No Subscription"
-                            class="input-radio" data-validate="<?= $block->escapeHtml(json_encode($block->getQuantityValidators())) ?>" />
-                            <span><?= $block->escapeHtml(__('No Subscription')) ?></span>
-                        </label>-->
                         <label class="label">
                             <input type="checkbox" name="subscription" value="1" title="Subscription"
                             class="input-radio" data-validate="<?= $block->escapeHtml(json_encode($block->getQuantityValidators())) ?>" />
@@ -88,11 +69,11 @@
                     <div class="field">
                         <div class="end_by_date">
                             <label class="label" for="enddate"><span><?= $block->escapeHtml(__('Select End Date')) ?></span></label>
-                            <input type="date" name="enddate">
+                            <input type="date" name="enddate" class="input-text">
                         </div>
                         <div class="end_by_cycle">
                             <label class="label" for="orders"><span><?= $block->escapeHtml(__('No of Orders')) ?></span></label>
-                            <input type="number" name="orders" id="orders" value="<?= $block->getProductDefaultQty() * 1 ?>" title="<?= $block->escapeHtmlAttr(__('Qty')) ?>" class="input-text" />
+                            <input type="number" name="orders" id="orders" value="1" class="input-text" />
                         </div>
                     </div>
                     <?php if ($subscription['discount_status']) {?>
@@ -115,18 +96,9 @@
             </div>
         </div>
         <?php endif;?>
-        <div class="actions">
-            <button type="submit"
-                    title="<?= $block->escapeHtmlAttr($buttonTitle) ?>"
-                    class="action primary tocart"
-                    id="product-addtocart-button" disabled>
-                <span><?= $block->escapeHtml($buttonTitle) ?></span>
-            </button>
-            <?= $block->getChildHtml('', true) ?>
-        </div>
-    </div>
-</div>
-<?php endif; ?>
+
+
+
 <script type="text/x-magento-init">
     {
         "#product_addtocart_form": {
